make progress with the messages view.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode production && cp -r img dist && cp favicon.ico dist && cp index.html dist && Globular deploy -u=sa -p=adminadmin -name=chitchat -a=globular.io -path=dist"
+    "build": "webpack --mode production && cp -r img dist && cp colorName.csv dist && cp favicon.ico dist && cp index.html dist && Globular deploy -u=sa -p=adminadmin -name=chitchat -a=globular.io -path=dist"
   },
   "devDependencies": {
     "css-loader": "^3.4.0",
